# tc2-launcher

./: .gitignore  LICENSE  README.md  ThirdPartyLicenses.txt  build-linux.spec  build-qt.sh  build-windows.spec  build.bat  build.sh  pyproject.toml  version.rc
.github/workflows/: ci.yml  release.yml
gui/: index.html  update.html
script/: bump_version.py  tag.sh
tc2_launcher/: __init__.py  __main__.py  env.py  gui.py  hardware.py  logger.py  run.py  utils.py
